[package]
name = "cross"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cross"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
anchor-debug = []
custom_panic_default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
oapp = { git = "https://github.com/LayerZero-Labs/LayerZero-v2.git", branch = "main" }
